# ttd-bot

./: .dockerignore  .env  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README-CI.md  README.md  clovers.toml  clovers.toml.example  docker-compose.yml  pyproject.toml  requirements.txt  ttd-bot.openrc
.codex/: config.toml
.codex/hooks/: block_ttd_bot_git_tag.py
.github/workflows/: ci.yml  ci.yml.disabled  docker-build-push.yml  docker-compose-ci.yml  docker-compose-on-tag.yml
docker/: gunicorn_conf.py  prestart.sh
scripts/: create_deploy_tag.py  migrate_learning_chat_sqlite_to_pg.py  migrate_orm_sqlite_to_postgres.py  precommit_ttd_help_gate.py
src/plugins/_etx_query/: __init__.py
src/plugins/access_request/: __init__.py  config.py  service.py  storage.py
src/plugins/auto_ping/: __init__.py  config.py  helpers.py  storage.py
src/plugins/auto_react/: __init__.py  face.py  user_storage.py
src/plugins/chat_statistics/: README.md  __init__.py  __main__.py  config.py  demo_comparison.py  statistics.py  statistics_fixed.py  test_plugin.py  visualization.py
src/plugins/citation_counter/: __main__.py  citation_counter_db.py  config.py
src/plugins/coc_apk_checker/: __init__.py  config.py
src/plugins/easy_trigger/: __init__.py  config.py
src/plugins/etx_query/: __init__.py  config.py
src/plugins/mc_server_checker/: __init__.py  config.py  storage.py
src/plugins/mute_detector/: __init__.py
src/plugins/quickmatch_query/: __init__.py
src/plugins/release_note/: README.md  USAGE.md  __init__.py  config.py
src/plugins/sticker_to_image/: __init__.py
src/plugins/tetr_chercher/: __init__.py  config.py  user_storage.py
src/plugins/ttd_help/: __init__.py  formatter.py  registry.py
tests/: conftest.py  test_access_request.py  test_auto_ping.py  test_cache.py  test_coc_apk_checker.py  test_easy_trigger.py  test_etx_query.py  test_mc_server_checker_presence.py  test_query_chat.py  test_quickmatch_query.py  test_release_note_alert.py  test_sticker_to_image.py  test_tetr_chercher.py  test_ttd_help.py
ttd-bot/: .env.prod  .gitignore  pyproject.toml  requirements.txt
ttd-bot/docker/: pip.conf
ttd-bot/src/plugins/citation_counter/: __init__.py  __main__.py  citation_counter_db.py  config.py
