[project]
name = "ttd-bot"
version = "1.0.0"
description = "ttd-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_orm", "nonebot_plugin_localstore", "nonebot_plugin_uninfo", "nonebot_plugin_status", "nonebot_plugin_chatrecorder", "nonebot_plugin_wordcloud", "nonebot_plugin_datastore", "nonebot_plugin_add_friends", "nonebot-plugin-auto-sendlike", "nonebot_plugin_authrespond"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
