[project]
name = "ttd-bot"
version = "1.0.2"
description = "ttd-bot"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.35.0",
    "nonebot2[httpx,fastapi,aiohttp]>=2.4.2",
    "nb-cli>=1.4.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-orm[default]>=0.8.1",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-uninfo>=0.8.2",
    "nonebot-plugin-status>=0.9.0",
    "nonebot-plugin-chatrecorder>=0.7.0",
    "nonebot-plugin-wordcloud>=0.9.0",
    "nonebot-plugin-datastore>=1.3.0",
    "nonebot-plugin-add-friends>=0.1.5",
    "nonebot-plugin-auto-sendlike>=0.0.12",
    "nonebot-plugin-authrespond>=1.8",
    "nonebot-plugin-deer-pipe>=0.4.2",
    "nonebot-plugin-learning-chat @ git+https://github.com/trytodupe/nonebot-plugin-learning-chat@42355f45de3a1fae46e47668e5122bb26e0acd1c",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [
    "nonebot_plugin_orm",
    "nonebot_plugin_localstore",
    "nonebot_plugin_uninfo",
    "nonebot_plugin_status",
    "nonebot_plugin_chatrecorder",
    "nonebot_plugin_wordcloud",
    "nonebot_plugin_datastore",
    "nonebot_plugin_add_friends",
    "nonebot-plugin-auto-sendlike",
    "nonebot_plugin_authrespond",
    "nonebot_plugin_deer_pipe",
    "nonebot_plugin_learning_chat",
]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
